--- a/code/mike/javascript/lab11/index.html
+++ b/code/mike/javascript/lab11/index.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue Todos</title>
+    <title>Vue Tasks</title>
     <link rel="stylesheet" href="style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-    <div id="taskList">
-        <h1>Vue Todos & Tasks</h1>
-        <input type="text" v-model="newTask" placeholder="Enter New Task"/>
-        <button v-on:click="addTask">Add</button>
-        <ul>
-            <li v-for="(task, index) in tasks">
-                {{ task }}
-                <input type="checkbox" v-model="toggle">
-                <button v-on:click="deleteBt(index)" class="deleteBT">Delete</button>
-            </li>
+    <div id="app" class="container"><br>
+        <h1>Tasks List</h1>
+        <add-task @add="addTask"></add-task><br>
+        <ul vi-if="incompleteTasks.length" class="list-unstyled">
+            <task-item
+                v-for="task in incompleteTasks"
+                :key="task.id"
+                :task="task"
+                @remove="removeTask"
+            ></task-item>
+        </ul>
+        <ul v-if="completeTasks.length" class="list-unstyled">
+            <hr>
+            <h1>Completed Tasks</h1><br>
+            <task-item
+                v-for="task in completeTasks"
+                :key="task.id"
+                :task="task"
+                @remove="removeTask"
+            ></task-item>
         </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
