vue api progress

--- a/code/richard/javascript/lab_13_api/index.html
+++ b/code/richard/javascript/lab_13_api/index.html
@@ -2,15 +2,40 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Vue!</title>
+        <title>Vue Quote Generator</title>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
+        <h1>The Famous Quote Generator</h1>
         <div id="app">
-            <button @click="loadQuotes">Quote me!</button>
-            <div v-for="quote in results.quotes" :key="quote.id">
+            <div id = "questions">
+            <label for="search_term">Search For:</label><br>
+            <input v-model="search_term" type="text" id="search_term" name="search_term" value="Steve Jobs"><br>
+
+            <input v-model="search_type" type="radio" id="keyword" name="search_type" value="keyword">
+            <label for="keyword">Keyword</label><br>
+            <input v-model="search_type" type="radio" id="author" name="search_type" value="author" checked>
+            <label for="author">Author</label><br>
+            <input v-model="search_type" type="radio" id="tag" name="search_type" value="tag">
+            <label for="tag">Tag</label><br>
+
+            <button @click="loadQuotes">Get Quotes!</button>
+            </div>
+
+        <h2>Here are your quotes</h2>
+            <div id="answers" v-for="quote in results.quotes" :key="quote.id">
                 <p>{{ quote.body }}</p>
                 <p><a :href="quote.url">{{ quote.author }}</a></p>
             </div>
+
+            <!-- <div id="random25" v-for="quote in random25.quotes" :key="quote.id">
+                <p>{{ quote.body }}</p>
+                <p><a :href="quote.url">{{ quote.author }}</a></p>
+            </div> -->
+
+
+
+
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
