vue titanic progress

--- a/code/richard/javascript/lab_14_api_titanic/x_index.html
+++ b/code/richard/javascript/lab_14_api_titanic/x_index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Titanic Predictions</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="x_main.css">
     </head>
     <body>
         <h1>Titanic Predictions</h1>
