--- a/code/charlie/Vue/lab14/index.html
+++ b/code/charlie/Vue/lab14/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id= "Nasa">
         <h2>Browse NEO(Near Earth object) Feed</h2>
-        <input type="text" id="start_date" placeholder="MM-DD-YYYY">
-        <input type="text" id="end_date" placeholder="MM-DD-YYYY" @keyup.enter="NEOFeed">
+        <input type="date" id="start_date" placeholder="MM-DD-YYYY">
+        <input type="date" id="end_date" placeholder="MM-DD-YYYY" @keyup.enter="NEOFeed">
         <button @click="NEOFeed">Search</button> 
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
